# fast_stock

./: .env  README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/models/: token.py  users.py
backend/app/api/routes/: login.py  users.py
backend/app/core/: config.py  db.py
backend/app/models/: stock.py  token.py  users.py
backend/data/: database.db
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/cn/qinxiandiqi/stock/fast_stock/: MainActivity.kt
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
